src/MudBlazor/wwwroot/MudBlazor.css
/* ... */
  .mud-chip-outlined.mud-chip-color-info {
    color: var(--mud-palette-info);
    border: 1px solid var(--mud-palette-info); }
    .mud-chip-outlined.mud-chip-color-info:hover {
      background-color: var(--mud-palette-info-hover); }
  .mud-chip-outlined.mud-chip-color-success {
    color: var(--mud-palette-success);
    border: 1px solid var(--mud-palette-success); }
    .mud-chip-outlined.mud-chip-color-success:hover {
      background-color: var(--mud-palette-success-hover); }
  .mud-chip-outlined.mud-chip-color-warning {
    color: var(--mud-palette-warning);
    border: 1px solid var(--mud-palette-warning); }
    .mud-chip-outlined.mud-chip-color-warning:hover {
      background-color: var(--mud-palette-warning-hover); }
  .mud-chip-outlined.mud-chip-color-error {
    color: var(--mud-palette-error);
    border: 1px solid var(--mud-palette-error); }
    .mud-chip-outlined.mud-chip-color-error:hover {
      background-color: var(--mud-palette-error-hover); }
  .mud-chip-outlined.mud-chip-color-dark {
    color: var(--mud-palette-dark);
    border: 1px solid var(--mud-palette-dark); }
    .mud-chip-outlined.mud-chip-color-dark:hover {
      background-color: var(--mud-palette-dark-hover); }

.mud-chip-selected {
  color: var(--mud-palette-primary);
  background-color: var(--mud-palette-primary-hover) !important; }

.mud-collapse-container {
  max-height: 0;
  transition: max-height 267ms ease-out;
  overflow: hidden; }

.mud-collapse-expanded {
  max-height: 2000px;
  transition: max-height 267ms ease-in; }

.mud-collapse-hidden {
  visibility: hidden; }

.mud-collapse-wrapper {
  display: flex; }

.mud-collapse-wrapper-inner {
  width: 100%; }

.mud-dialog-container {
  display: flex;
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 200; }
  .mud-dialog-container.mud-dialog-center {
    align-items: center;
    justify-content: center; }
  .mud-dialog-container.mud-dialog-topleft .mud-dialog {
    position: absolute;
    top: 32px;
    left: 32px; }
  .mud-dialog-container.mud-dialog-topright .mud-dialog {
    position: absolute;
    top: 32px;
    right: 32px; }
  .mud-dialog-container.mud-dialog-bottomleft .mud-dialog {
    position: absolute;
    bottom: 32px;
    left: 32px; }
  .mud-dialog-container.mud-dialog-bottomright .mud-dialog {
    position: absolute;
    bottom: 32px;
    right: 32px; }

.mud-dialog-overlay {
  top: 0;
  left: 0;
  margin: 0px !important;
  height: 100%;
  width: 100%;
  position: fixed;
  z-index: 201;
  background-color: rgba(0, 0, 0, 0.5);
  animation: mud-animation-fadein ease 0.15s;
  -webkit-animation: mud-animation-fadein ease 0.15s;
  -moz-animation: mud-animation-fadein ease 0.15s;
  -o-animation: mud-animation-fadein ease 0.15s; }

.mud-dialog {
  display: flex;
  z-index: 202;
  flex-direction: column;
  color: var(--mud-palette-text-primary);
  background-color: var(--mud-palette-surface);
  border-radius: var(--mud-default-borderradius);
  -webkit-animation: mud-scale-up-center 0.1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
  animation: mud-scale-up-center 0.1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
  box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12); }
  .mud-dialog .mud-dialog-title {
    flex: 0 0 auto;
    margin: 0;
    padding: 16px 24px; }
    .mud-dialog .mud-dialog-title .mud-button-root {
      top: 8px;
      right: 8px;
      position: absolute; }
  .mud-dialog .mud-dialog-content {
    position: relative;
    flex: 1 1 auto;
    overflow-y: hidden;
    padding: 8px 24px;
    -webkit-overflow-scrolling: touch; }
    .mud-dialog .mud-dialog-content.mud-dialog-no-side-padding {
      padding: 12px 0px; }
  .mud-dialog .mud-dialog-actions {
    flex: 0 0 auto;
    display: flex;
    padding: 8px;
    align-items: center;
    justify-content: flex-end; }
    .mud-dialog .mud-dialog-actions > :not(:first-child) {
      margin-left: 8px; }

.mud-dialog-width-false {
  max-width: calc(100% - 64px); }

.mud-dialog-width-xs {
  max-width: 444px; }

.mud-dialog-width-sm {
  max-width: 600px; }

.mud-dialog-width-md {
  max-width: 960px; }

.mud-dialog-width-lg {
  max-width: 1280px; }

.mud-dialog-width-xl {
  max-width: 1920px; }

.mud-dialog-width-full {
  width: calc(100% - 64px); }

.mud-dialog-fullscreen {
  width: 100%;
  height: 100%;
  margin: 0;
  max-width: 100%;
  max-height: none;
  border-radius: 0; }

.mud-grid {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  box-sizing: border-box; }

.mud-grid-item {
  margin: 0;
  box-sizing: border-box; }

.mud-grid-zero-minwidth {
  min-width: 0; }

.mud-grid-direction-xs-column {
  flex-direction: column; }

.mud-grid-direction-xs-column-reverse {
  flex-direction: column-reverse; }

.mud-grid-direction-xs-row-reverse {
  flex-direction: row-reverse; }

.mud-grid-wrap-xs-nowrap {
  flex-wrap: nowrap; }

.mud-grid-wrap-xs-wrap-reverse {
  flex-wrap: wrap-reverse; }

.mud-grid-align-items-xs-center {
  align-items: center; }

.mud-grid-align-items-xs-flex-start {
  align-items: flex-start; }

.mud-grid-align-items-xs-flex-end {
  align-items: flex-end; }

.mud-grid-align-items-xs-baseline {
  align-items: baseline; }

.mud-grid-align-content-xs-center {
  align-content: center; }

.mud-grid-align-content-xs-flex-start {
  align-content: flex-start; }

.mud-grid-align-content-xs-flex-end {
  align-content: flex-end; }

.mud-grid-align-content-xs-space-between {
  align-content: space-between; }

.mud-grid-align-content-xs-space-around {
  align-content: space-around; }

.mud-grid-justify-xs-center {
  justify-content: center; }

.mud-grid-justify-xs-flex-end {
  justify-content: flex-end; }

.mud-grid-justify-xs-space-between {
  justify-content: space-between; }

.mud-grid-justify-xs-space-around {
  justify-content: space-around; }

.mud-grid-justify-xs-space-evenly {
  justify-content: space-evenly; }

.mud-grid-spacing-xs-1 {
  width: calc(100% + 8px);
  margin: -4px; }
/* ... */

